--- a/presentation/src/main/res/values/themes.xml
+++ b/presentation/src/main/res/values/themes.xml
@@ -3,6 +3,7 @@
         <item name="colorPrimary">@color/colorTextPrimary</item>
         <item name="colorPrimaryDark">@color/colorTextPrimary</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:windowBackground">@drawable/background_primary</item>
     </style>
 
     <style name="AppTheme.Light.Splash" parent="AppTheme.Light">
