--- a/presentation/src/main/res/layout/holder_pizza.xml
+++ b/presentation/src/main/res/layout/holder_pizza.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
+<com.google.android.material.card.MaterialCardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_marginHorizontal="@dimen/margin_size_medium"
-    android:layout_marginBottom="@dimen/margin_size_medium"
+    android:layout_marginVertical="@dimen/margin_size_small"
     app:cardCornerRadius="@dimen/radius_size_large"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -14,17 +14,18 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <ImageView
+        <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/imgPizza"
-            tools:src="@drawable/ic_pizza_logo"
+            app:shapeAppearanceOverlay="@style/CardView.Round.Shape"
+            tools:src="@drawable/background_primary"
             android:scaleType="centerCrop"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="0dp"
-            android:contentDescription="@string/pizza_photo_description"
-            app:layout_constraintDimensionRatio="2.5:1"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintDimensionRatio="2.2:1"
+            app:layout_constraintTop_toTopOf="parent"
+            android:contentDescription="@string/pizza_photo_description" />
 
         <TextView
             android:id="@+id/txtName"
@@ -50,7 +51,7 @@
             android:paddingHorizontal="@dimen/margin_size_medium"
             android:paddingVertical="@dimen/margin_size_small"
             android:textColor="?attr/colorPrimary"
-            android:textSize="@dimen/text_size_small"
+            android:textSize="@dimen/text_size_extra_small"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/txtPrice"
             app:layout_constraintStart_toStartOf="parent"
@@ -72,4 +73,4 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-</androidx.cardview.widget.CardView>
+</com.google.android.material.card.MaterialCardView>
