--- a/presentation/src/main/res/values/dimens.xml
+++ b/presentation/src/main/res/values/dimens.xml
@@ -1,11 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <dimen name="text_size_extra_large">36sp</dimen>
     <dimen name="text_size_large">28sp</dimen>
     <dimen name="text_size_medium">24sp</dimen>
-    <dimen name="text_size_small">14sp</dimen>
+    <dimen name="text_size_small">18sp</dimen>
+    <dimen name="text_size_extra_small">14sp</dimen>
 
+    <dimen name="margin_size_large">20dp</dimen>
     <dimen name="margin_size_medium">16dp</dimen>
     <dimen name="margin_size_small">8dp</dimen>
-    <dimen name="radius_size_large">24dp</dimen>
+
+    <dimen name="radius_size_large">18dp</dimen>
+
+    <dimen name="elevation_size_extra_large">16dp</dimen>
     <dimen name="elevation_size_large">8dp</dimen>
+    <dimen name="elevation_size_none">0dp</dimen>
 </resources>
