--- a/presentation/src/main/res/values/colors.xml
+++ b/presentation/src/main/res/values/colors.xml
@@ -4,5 +4,6 @@
     <color name="colorTextPrimary">#424242</color>
     <color name="colorBackgroundGradientStart">#FFFFFF</color>
     <color name="colorBackgroundGradientEnd">#F6F6F6</color>
-    <color name="colorBackgroundInput">#7AEEEEEE</color>
+    <color name="colorBackgroundInput">#B2EEEEEE</color>
+    <color name="colorTextHint">#747474</color>
 </resources>
