--- a/presentation/src/main/res/values/descriptions.xml
+++ b/presentation/src/main/res/values/descriptions.xml
@@ -3,4 +3,5 @@
     <string name="pizza_photo_description">Pizza photo</string>
     <string name="search_button_description">Search button</string>
     <string name="swipe_bar_description">Swipe to close</string>
+    <string name="i_pizza_logo">iPizza logo</string>
 </resources>
