--- a/presentation/src/main/res/values/descriptions.xml
+++ b/presentation/src/main/res/values/descriptions.xml
@@ -4,4 +4,5 @@
     <string name="search_button_description">Search button</string>
     <string name="swipe_bar_description">Swipe to close</string>
     <string name="i_pizza_logo">iPizza logo</string>
+    <string name="image_description">Gallery image</string>
 </resources>
