--- a/presentation/src/main/res/layout/fragment_gallery.xml
+++ b/presentation/src/main/res/layout/fragment_gallery.xml
@@ -30,6 +30,7 @@
 
     <TextView
         android:id="@+id/txtTitle"
+        android:maxLines="1"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:fontFamily="@font/lato_bold"
