--- a/presentation/src/main/res/layout/fragment_order_success.xml
+++ b/presentation/src/main/res/layout/fragment_order_success.xml
@@ -44,27 +44,24 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtLabel" />
 
-    <RelativeLayout
+    <androidx.appcompat.widget.AppCompatButton
+        style="?android:attr/borderlessButtonStyle"
+        android:textAllCaps="false"
         android:id="@+id/btnMenu"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_margin="@dimen/margin_size_medium"
         android:background="@drawable/background_button_light"
-        app:layout_constraintBottom_toBottomOf="parent">
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentEnd="true"
-            android:fontFamily="@font/lato_bold"
-            android:gravity="center"
-            android:padding="@dimen/margin_size_large"
-            android:text="@string/order_success_button_label"
-            android:textColor="?attr/colorPrimary"
-            android:textSize="@dimen/text_size_small" />
-
-    </RelativeLayout>
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:fontFamily="@font/lato_bold"
+        android:gravity="center"
+        android:layout_margin="@dimen/margin_size_large"
+        android:padding="@dimen/margin_size_large"
+        android:text="@string/order_success_button_label"
+        android:textColor="?attr/colorPrimary"
+        android:textSize="@dimen/text_size_small"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
