--- a/presentation/src/main/res/values/dimens.xml
+++ b/presentation/src/main/res/values/dimens.xml
@@ -17,4 +17,5 @@
     <dimen name="elevation_size_large">8dp</dimen>
     <dimen name="image_height_medium">136dp</dimen>
     <dimen name="button_size_small">38dp</dimen>
+    <dimen name="stroke_size_medium">4dp</dimen>
 </resources>
