--- a/presentation/src/main/res/drawable/background_button_outline.xml
+++ b/presentation/src/main/res/drawable/background_button_outline.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape android:shape="rectangle"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
 
-    <stroke android:width="@dimen/stroke_size_medium" android:color="@color/colorBackgroundInput"/>
-    <corners android:radius="@dimen/radius_size_large"/>
+    <corners android:radius="@dimen/radius_size_large" />
+    <stroke
+        android:width="@dimen/stroke_size_medium"
+        android:color="@color/colorBackgroundInput" />
 </shape>
