--- a/presentation/src/main/res/drawable/background_primary.xml
+++ b/presentation/src/main/res/drawable/background_primary.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape android:shape="rectangle"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
 
     <gradient
         android:angle="270"
-        android:startColor="@color/colorBackgroundGradientStart"
-        android:endColor="@color/colorBackgroundGradientEnd"/>
+        android:endColor="@color/colorBackgroundGradientEnd"
+        android:startColor="@color/colorBackgroundGradientStart" />
 </shape>
