--- a/presentation/src/main/res/drawable/ic_clear.xml
+++ b/presentation/src/main/res/drawable/ic_clear.xml
@@ -3,11 +3,11 @@
     android:height="26dp"
     android:viewportWidth="23"
     android:viewportHeight="26">
-  <path
-      android:pathData="M7.8571,4.4286L8.7143,1H13.8571L14.7143,4.4286M21.5714,4.4286H2.7143L4.4286,25H18.1429L19.8571,4.4286H1H21.5714ZM11.2857,9.5714V19.8571V9.5714ZM15.5714,9.5714L14.7143,19.8571L15.5714,9.5714ZM7,9.5714L7.8571,19.8571L7,9.5714Z"
-      android:strokeLineJoin="round"
-      android:strokeWidth="2"
-      android:fillColor="#00000000"
-      android:strokeColor="#424242"
-      android:strokeLineCap="round"/>
+    <path
+        android:fillColor="#00000000"
+        android:pathData="M7.8571,4.4286L8.7143,1H13.8571L14.7143,4.4286M21.5714,4.4286H2.7143L4.4286,25H18.1429L19.8571,4.4286H1H21.5714ZM11.2857,9.5714V19.8571V9.5714ZM15.5714,9.5714L14.7143,19.8571L15.5714,9.5714ZM7,9.5714L7.8571,19.8571L7,9.5714Z"
+        android:strokeWidth="2"
+        android:strokeColor="#424242"
+        android:strokeLineCap="round"
+        android:strokeLineJoin="round" />
 </vector>
