--- a/presentation/src/main/res/layout/dialog_confirmation.xml
+++ b/presentation/src/main/res/layout/dialog_confirmation.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:paddingVertical="@dimen/margin_size_large"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:paddingVertical="@dimen/margin_size_large">
 
     <TextView
         android:id="@+id/txtLabel"
-        android:textAllCaps="false"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:fontFamily="@font/lato_regular"
@@ -22,18 +21,18 @@
         tools:text="Do you want to quit?" />
 
     <androidx.appcompat.widget.AppCompatButton
-        style="?android:attr/borderlessButtonStyle"
-        android:textAllCaps="false"
         android:id="@+id/btnPositive"
-        android:layout_margin="@dimen/margin_size_large"
+        style="?android:attr/borderlessButtonStyle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
+        android:layout_margin="@dimen/margin_size_large"
         android:background="@drawable/background_button_accent"
         android:fontFamily="@font/lato_bold"
         android:gravity="center"
         android:padding="@dimen/margin_size_large"
+        android:textAllCaps="false"
         android:textColor="?attr/colorPrimary"
         android:textSize="@dimen/text_size_small"
         app:layout_constraintEnd_toEndOf="parent"
@@ -43,13 +42,14 @@
         tools:text="Yes" />
 
     <androidx.appcompat.widget.AppCompatButton
-        style="?android:attr/borderlessButtonStyle"
         android:id="@+id/btnNegative"
-        android:layout_margin="@dimen/margin_size_large"
+        style="?android:attr/borderlessButtonStyle"
+        android:textAllCaps="false"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
+        android:layout_margin="@dimen/margin_size_large"
         android:background="@drawable/background_button_outline"
         android:fontFamily="@font/lato_bold"
         android:gravity="center"
