--- a/presentation/src/main/res/layout/dialog_pizza_details.xml
+++ b/presentation/src/main/res/layout/dialog_pizza_details.xml
@@ -1,37 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    android:background="@drawable/background_primary"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     style="@style/AppTheme.Light.Sheet"
-    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    android:background="@drawable/background_primary">
 
     <ImageView
         android:id="@+id/imgSwipe"
-        android:src="@drawable/ic_swipe"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_margin="@dimen/margin_size_medium"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="@string/swipe_bar_description" />
-
-    <com.google.android.material.imageview.ShapeableImageView
-        android:id="@+id/imgPizza"
-        app:shapeAppearanceOverlay="@style/CardView.Round.Shape"
-        tools:src="@drawable/background_primary"
-        android:scaleType="centerCrop"
         android:layout_margin="@dimen/margin_size_medium"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintStart_toStartOf="parent"
+        android:contentDescription="@string/swipe_bar_description"
+        android:src="@drawable/ic_swipe"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/imgSwipe"
-        app:layout_constraintDimensionRatio="1.5:1"
-        android:contentDescription="@string/pizza_photo_description" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/txtName"
@@ -39,12 +24,12 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/lato_bold"
         android:padding="@dimen/margin_size_medium"
-        tools:text="Margarita"
         android:textColor="?attr/colorPrimary"
         android:textSize="@dimen/text_size_extra_large"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/imgPizza" />
+        app:layout_constraintTop_toBottomOf="@id/imgPizza"
+        tools:text="Margarita" />
 
     <TextView
         android:id="@+id/txtDescription"
@@ -61,26 +46,26 @@
         tools:text="Сheese,tomatoes,fresh onion leaves..." />
 
     <com.google.android.material.card.MaterialCardView
-        style="@style/CardView.RoundTop"
         android:id="@+id/rootActionButton"
+        style="@style/CardView.RoundTop"
         android:layout_width="match_parent"
-        app:shapeAppearanceOverlay="@style/CardView.RoundTop.Shape"
-        android:layout_marginBottom="@dimen/radius_size_large"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/radius_size_large"
+        android:clipToPadding="false"
         app:cardElevation="@dimen/elevation_size_extra_large"
         app:cardPreventCornerOverlap="true"
-        android:clipToPadding="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtDescription">
+        app:layout_constraintTop_toBottomOf="@+id/txtDescription"
+        app:shapeAppearanceOverlay="@style/CardView.RoundTop.Shape">
 
         <RelativeLayout
             android:id="@+id/btnAddToCart"
-            android:layout_gravity="center"
-            android:background="@drawable/background_button_accent"
-            android:layout_margin="@dimen/margin_size_medium"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_margin="@dimen/margin_size_medium"
+            android:background="@drawable/background_button_accent">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -107,5 +92,19 @@
         </RelativeLayout>
 
     </com.google.android.material.card.MaterialCardView>
+
+    <com.google.android.material.imageview.ShapeableImageView
+        android:id="@+id/imgPizza"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_margin="@dimen/margin_size_medium"
+        android:contentDescription="@string/pizza_photo_description"
+        android:scaleType="centerCrop"
+        app:layout_constraintDimensionRatio="1.5:1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/imgSwipe"
+        app:shapeAppearanceOverlay="@style/CardView.Round.Shape"
+        tools:src="@drawable/background_primary" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
