--- a/presentation/src/main/res/layout/fragment_order_success.xml
+++ b/presentation/src/main/res/layout/fragment_order_success.xml
@@ -1,26 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    android:background="@color/colorAccent"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:background="@color/colorAccent">
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:contentDescription="@string/i_pizza_logo"
         android:src="@drawable/ic_pizza_logo"
         app:layout_constraintBottom_toTopOf="@+id/txtLabel"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:contentDescription="@string/i_pizza_logo" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/txtLabel"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:gravity="center"
         android:fontFamily="@font/lato_bold"
+        android:gravity="center"
         android:padding="@dimen/margin_size_medium"
         android:text="@string/order_success_label"
         android:textColor="?attr/colorPrimary"
@@ -45,23 +44,23 @@
         app:layout_constraintTop_toBottomOf="@+id/txtLabel" />
 
     <androidx.appcompat.widget.AppCompatButton
-        style="?android:attr/borderlessButtonStyle"
-        android:textAllCaps="false"
         android:id="@+id/btnMenu"
-        android:background="@drawable/background_button_light"
+        style="?android:attr/borderlessButtonStyle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
+        android:layout_margin="@dimen/margin_size_large"
+        android:background="@drawable/background_button_light"
         android:fontFamily="@font/lato_bold"
         android:gravity="center"
-        android:layout_margin="@dimen/margin_size_large"
         android:padding="@dimen/margin_size_large"
         android:text="@string/order_success_button_label"
+        android:textAllCaps="false"
         android:textColor="?attr/colorPrimary"
         android:textSize="@dimen/text_size_small"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
