--- a/presentation/src/main/res/layout/holder_order.xml
+++ b/presentation/src/main/res/layout/holder_order.xml
@@ -1,37 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:layout_marginHorizontal="@dimen/margin_size_medium"
     android:layout_marginVertical="@dimen/margin_size_small"
     app:cardCornerRadius="@dimen/radius_size_large"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    app:cardElevation="@dimen/elevation_size_large"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    app:cardElevation="@dimen/elevation_size_large">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <com.google.android.material.imageview.ShapeableImageView
-            android:id="@+id/imgPizza"
-            app:shapeAppearanceOverlay="@style/CardView.Round.Shape"
-            tools:src="@drawable/background_primary"
-            android:scaleType="centerCrop"
-            android:layout_width="0dp"
-            android:layout_height="@dimen/image_height_medium"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintDimensionRatio="1.2:1"
-            app:layout_constraintTop_toTopOf="parent"
-            android:contentDescription="@string/pizza_photo_description" />
+        <ImageButton
+            android:id="@+id/btnRemove"
+            android:layout_width="@dimen/button_size_small"
+            android:layout_height="@dimen/button_size_small"
+            android:layout_marginStart="@dimen/margin_size_large"
+            android:background="@drawable/background_button_gray"
+            android:contentDescription="@string/search_button_description"
+            android:foreground="?attr/selectableItemBackgroundBorderless"
+            android:padding="@dimen/margin_size_small"
+            android:src="@drawable/ic_remove"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/imgPizza"
+            app:layout_constraintTop_toBottomOf="@+id/txtPrice"
+            tools:ignore="UnusedAttribute" />
+
+        <ImageButton
+            android:id="@+id/btnAdd"
+            android:layout_width="@dimen/button_size_small"
+            android:layout_height="@dimen/button_size_small"
+            android:layout_marginEnd="@dimen/margin_size_large"
+            android:background="@drawable/background_button_gray"
+            android:contentDescription="@string/search_button_description"
+            android:foreground="?attr/selectableItemBackgroundBorderless"
+            android:padding="@dimen/margin_size_small"
+            android:src="@drawable/ic_add"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/txtPrice"
+            tools:ignore="UnusedAttribute" />
 
         <TextView
             android:id="@+id/txtName"
-            android:maxLines="1"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:fontFamily="@font/lato_bold"
+            android:maxLines="1"
             android:paddingHorizontal="@dimen/margin_size_medium"
             android:paddingTop="@dimen/margin_size_small"
             android:textColor="?attr/colorPrimary"
@@ -55,52 +72,34 @@
             app:layout_constraintTop_toBottomOf="@id/txtName"
             tools:text="779$" />
 
-        <ImageButton
-            android:id="@+id/btnRemove"
-            android:layout_width="@dimen/button_size_small"
-            android:layout_height="@dimen/button_size_small"
-            android:foreground="?attr/selectableItemBackgroundBorderless"
-            android:background="@drawable/background_button_gray"
-            android:contentDescription="@string/search_button_description"
-            android:padding="@dimen/margin_size_small"
-            android:layout_marginStart="@dimen/margin_size_large"
-            android:src="@drawable/ic_remove"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/imgPizza"
-            app:layout_constraintTop_toBottomOf="@+id/txtPrice"
-            tools:ignore="UnusedAttribute" />
-
-        <ImageButton
-            android:id="@+id/btnAdd"
-            android:foreground="?attr/selectableItemBackgroundBorderless"
-            android:layout_width="@dimen/button_size_small"
-            android:layout_height="@dimen/button_size_small"
-            android:background="@drawable/background_button_gray"
-            android:contentDescription="@string/search_button_description"
-            android:padding="@dimen/margin_size_small"
-            android:layout_marginEnd="@dimen/margin_size_large"
-            android:src="@drawable/ic_add"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/txtPrice"
-            tools:ignore="UnusedAttribute" />
-
         <TextView
             android:id="@+id/txtQuantity"
-            android:maxLines="1"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:fontFamily="@font/lato_bold"
+            android:gravity="center"
+            android:maxLines="1"
             android:paddingHorizontal="@dimen/margin_size_medium"
             android:paddingVertical="@dimen/margin_size_small"
             android:textColor="?attr/colorPrimary"
-            android:gravity="center"
             android:textSize="@dimen/text_size_small"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/btnAdd"
             app:layout_constraintStart_toEndOf="@+id/btnRemove"
             app:layout_constraintTop_toBottomOf="@+id/txtPrice"
             tools:text="3" />
+
+        <com.google.android.material.imageview.ShapeableImageView
+            android:id="@+id/imgPizza"
+            android:layout_width="0dp"
+            android:layout_height="@dimen/image_height_medium"
+            android:contentDescription="@string/pizza_photo_description"
+            android:scaleType="centerCrop"
+            app:layout_constraintDimensionRatio="1.2:1"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:shapeAppearanceOverlay="@style/CardView.Round.Shape"
+            tools:src="@drawable/background_primary" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
